[tool.poetry]
name = "repl_python3_VoltiBot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.0.0"
pyfiglet = "^0.8.post1"
pytz = "^2021.3"
aiohttp = "^3.8.1"
orjson = "^3.6.8"
typing-extensions = "^4.1.1"
yarl = "^1.7.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
